迁移桌面版首图选择逻辑至远程版
